cluster/wikijs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - wiki.churrer.xyz
      secretName: wiki-tls
  rules:
    - host: "wiki.churrer.xyz"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wiki
                port:
                  number: 80
